--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,16 +23,17 @@ jobs:
 
       - name: Append NPM token to .npmrc in react package
         run: |
-          cd ./packages/react
+          cd packages/react
+          ls -la
           echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN_AUTOMATION}" >> .npmrc
 
       - name: Verify token set
         run: |
-          TOKEN_LINE=$(grep '_authToken' ./packages/react/.npmrc)
+          TOKEN_LINE=$(grep '_authToken' packages/react/.npmrc)
           echo "${TOKEN_LINE:0:41}"
 
       - name: Verify NPM Authentication
-        run: cd ./packages/react/ && npm whoami
+        run: cd packages/react/ && npm whoami
 
       - name: Install dependencies
         run: pnpm install -r
