--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,19 +21,18 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
-      - name: Append NPM token to .npmrc in react package
+      - name: Verify token set in root
         run: |
-          cd packages/react
-          echo -e "\n//registry.npmjs.org/:_authToken=${NPM_TOKEN_AUTOMATION}" >> .npmrc
-          ls -la
+          TOKEN_LINE=$(grep '_authToken' .npmrc)
+          echo "${TOKEN_LINE:0:41}"
 
-      - name: Verify token set
+      - name: Verify token set in packages/react
         run: |
           TOKEN_LINE=$(grep '_authToken' packages/react/.npmrc)
           echo "${TOKEN_LINE:0:41}"
 
       - name: Verify NPM Authentication
-        run: cd packages/react && npm whoami
+        run: npm whoami
 
       - name: Install dependencies
         run: pnpm install -r
