--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "override-version": "sh ./override-version.sh",
     "generate:docs": "node ./scripts/generate-docs.js",
     "prettify": "prettier --write .",
-    "core": "pnpm -r add @creation-ui/core@latest"
+    "core": "pnpm -r add @creation-ui/core@latest",
+    "update:tailwind": "pnpm -r add @headlessui/tailwindcss@latest @tailwindcss/aspect-ratio@latest @tailwindcss/typography@latest tailwind-merge@latest tailwindcss-debug-screens@latest prettier-plugin-tailwindcss@latest tailwindcss@latest"
   },
   "dependencies": {
     "@babel/parser": "^7.21.4",
@@ -38,12 +39,12 @@
     "@floating-ui/react": "^0.25.1",
     "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
-    "@headlessui/tailwindcss": "^0.1.2",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@preact/signals-react": "^1.3.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
@@ -82,7 +83,7 @@
     "react-timer-hook": "^3.0.5",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.59.3",
-    "tailwind-merge": "^1.10.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-debug-screens": "^2.2.1",
     "ts-json-schema-generator": "^1.2.0",
     "uuid": "^9.0.0"
@@ -121,7 +122,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
-    "prettier-plugin-tailwindcss": "^0.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "rollup": "^3.20.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
@@ -131,7 +132,7 @@
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "style-loader": "^3.3.2",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6"
   },
   "keywords": [],
