--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,7 +33,9 @@
     "@floating-ui/react": "^0.25.1",
     "@floating-ui/react-dom": "^2.0.1",
     "@headlessui/react": "^1.7.13",
-    "@headlessui/tailwindcss": "^0.1.3",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.7.6",
     "@tanstack/react-table": "^8.7.9",
     "@tanstack/table-core": "^8.7.9",
@@ -51,8 +53,9 @@
     "react-input-mask": "^2.0.4",
     "react-spring": "^9.7.1",
     "resize-observer-polyfill": "^1.5.1",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-debug-screens": "^2.2.1",
     "uuid": "^9.0.0"
   },
   "peerDependencies": {
@@ -89,7 +92,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.7",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "rollup": "^3.20.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
